[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/Misc/box.png" type="Texture" id=1]
[ext_resource path="res://Fonts/orange juice 2.0.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/arial.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/Scenes/ShopConfirmationScene.gd" type="Script" id=4]
[ext_resource path="res://Sprites/UI/Characters/Villager.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.137255, 1, 0.494118, 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 96
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 40
use_filter = true
font_data = ExtResource( 3 )

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 0, 0, 0, 0.313726 )
margin_right = 1920.0
margin_bottom = 936.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 320.0
margin_top = 192.0
margin_right = 1600.0
margin_bottom = 768.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Panel"]
margin_right = 1280.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Do you want to buy this item ?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YesButton" type="Button" parent="Panel"]
margin_left = 792.0
margin_top = 464.0
margin_right = 1120.0
margin_bottom = 566.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.0352941, 0.631373, 0.592157, 1 )
text = "YES"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoButton" type="Button" parent="Panel"]
margin_left = 168.0
margin_top = 464.0
margin_right = 496.0
margin_bottom = 566.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.631373, 0.0352941, 0.14902, 1 )
text = "NO"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="Panel"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 1216.0
margin_right = 1280.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Panel"]
margin_top = 104.0
margin_right = 1280.0
margin_bottom = 344.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
margin_top = 344.0
margin_right = 1280.0
margin_bottom = 440.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Villager"
align = 1
valign = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Panel/YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="Panel/NoButton" to="." method="_on_NoButton_pressed"]
[connection signal="pressed" from="Panel/CloseButton" to="." method="_on_CloseButton_pressed"]
